# android_kernel_google_gs201

./: .checkpatch.conf  .clang-format  .gitignore  .gitlab-ci.yml  Android.bp  BUILD.bazel  COPYING  GKI-files  Kbuild  Kconfig  Makefile  Makefile.ext_modules.cloudripper  Makefile.ext_modules.include  Makefile.ext_modules.lynx  Makefile.ext_modules.slider  OWNERS  OWNERS_core  aoc-interface-gs201.h  aoc.c  aoc.h  aoc_channel_dev.c  aoc_char_dev.c  aoc_firmware.h  aoc_ipc_core.c  aoc_ipc_core_internal.h  aoc_ramdump_regions.h  aoc_uwb_service_dev.h  bcm_l2_filter.c  bcmsdh.c  bcmsdspi.h  bcmspibrcm.c  bigo.c  bigo_io.c  bigo_pm.h  bigo_prioq.c  bigo_priv.h  bigo_slc.h  btpower.c  build.config.allmodconfig.aarch64  build.config.allmodconfig.arm  (+220 more)
alsa/: BUILD.bazel  aoc_alsa.h  aoc_alsa_card.c  aoc_alsa_compr.c  aoc_alsa_ctl.c  aoc_alsa_hw.c  aoc_alsa_incall.c  aoc_alsa_path.h  aoc_alsa_pcm.c  aoc_alsa_voice.c  aoc_alsa_voip.c  google-aoc-enum.h
amalthea/: config-pwr-state.h  config.h  mailbox-regs.h
android/: OWNERS  abi_gki_aarch64_common  abi_gki_aarch64_common.xml  abi_gki_aarch64_exynos  abi_gki_aarch64_galaxy  abi_gki_aarch64_generic  abi_gki_aarch64_qcom  abi_gki_aarch64_virtual_device
arch/: Kconfig
audiometrics/: Kconfig  audiometrics.c
block/: bfq-iosched.c  blk-core.c  blk-mq.c  blk-mq.h
cnss2/: Kconfig  Makefile  coexistence_service_v01.c  debug.h  ip_multimedia_subsystem_private_service_v01.h  main.h  pci_platform_google.c  qcom_ramdump.c  reg.h
cnss_genl/: cnss_nl.c
cnss_prealloc/: Makefile
cnss_utils/: Makefile  cnss_plat_ipc_qmi.c
crypto/: drbg.c
cs35l41/: Kconfig  cs35l41.c  wm_adsp.c  wm_adsp.h
cs35l45/: BUILD.bazel  Kconfig  Makefile  cs35l45-i2c.c  cs35l45-tables.c  cs35l45.c  cs35l45_dsp_events.h  wm_adsp.c
cs40l25/: cs40l2x-tables.c  cs40l2x.c  snd-soc-codec-cs40l2x.c
cs40l26/: Kconfig  cl_dsp-debugfs.c  cl_dsp.c  cl_dsp.h  cs40l26-codec.c  cs40l26-debugfs.c  cs40l26-i2c.c  cs40l26-spi.c  cs40l26-sysfs.c  cs40l26.c  cs40l26.h
display/: panel-samsung-s6e3fc3-l10.c
drivers/: Kconfig  Makefile  OWNERS
drv2624/: BUILD.bazel  Kconfig
dts/: gs201-lynx-audio.dtsi  gs201-lynx-battery-data.dtsi  (+13 more)
fs/: Makefile  (+15 more)
google-modules/amplifiers/cs35l41/: BUILD.bazel  Makefile  cs35l41-i2c.c  cs35l41-spi.c  cs35l41-tables.c  cs35l41.h
google-modules/amplifiers/cs35l41/include/sound/: cs35l41.h
google-modules/amplifiers/cs40l26/: BUILD.bazel  Kconfig  Makefile  cl_dsp.h  cs40l26-codec.c  cs40l26-i2c.c  cs40l26-spi.c  cs40l26-sysfs.c  cs40l26-tables.c  cs40l26.c  cs40l26.h  cs40l26.yaml
google-modules/bms/: BUILD.bazel  Makefile  OWNERS  gbms_power_supply.h  gbms_storage.c  gbms_storage.h  google_battery.c  google_bms.c  google_bms.h  google_charger.c  google_cpm.c  google_dc_pps.c  google_dc_pps.h  google_dock.c  google_dual_batt_gauge.c  google_eeprom.c  google_eeprom_01.c  gs101_usecase.c  gs101_usecase.h  max1720x.h  max1720x_battery.c  max1720x_battery.h  max1720x_outliers.c  max20339.c  max77729_charger.c  max77729_pmic.c  max77729_uic.c  max77759_maxq.c  max_m5.c  max_m5.h  overheat_mitigation.c  p9221-dt-bindings.h  p9221_charger.c  p9221_chip.c  pca9468_charger.c  pca9468_charger.h  pmic-voter.h
google-modules/display/include/: BUILD.bazel
google-modules/display/include/trace/: dpu_trace.h
google-modules/power/reset/: BUILD.bazel  Kbuild  Kconfig  Makefile  exynos-gs101-reboot.c  exynos-gs201-reboot.c
google-modules/touch/common/: BUILD.bazel  Kconfig  Makefile  goog_touch_interface.c  goog_touch_interface.h  heatmap.c  heatmap.h  touch_bus_negotiator.c  touch_bus_negotiator.h  touch_offload.c
google-modules/uwb/kernel/: BUILD.bazel
google-modules/uwb/kernel/drivers/net/ieee802154/: Kbuild  dw3000_calib.h  dw3000_chip_c0.c  dw3000_chip_c0.h  dw3000_chip_d0.h  dw3000_cir.h  dw3000_compat_reg.h  dw3000_core.c  dw3000_core.h  dw3000_debugfs.h  dw3000_mcps.c  dw3000_mcps.h  dw3000_nfcc_coex.h  dw3000_nfcc_coex_core.c  dw3000_nfcc_coex_core.h  dw3000_nfcc_coex_msg.h  dw3000_pm.h  dw3000_spi.c  dw3000_stm.c  dw3000_stm.h  dw3000_testmode.c  dw3000_testmode.h  dw3000_testmode_nl.h  dw3000_trc.c  dw3000_trc.h  mcps802154_fake.c
google-modules/uwb/kernel/include/net/: fira_region_nl.h  idle_region_nl.h  mcps802154_frame.h  mcps802154_schedule.h  nfcc_coex_region_nl.h  pctt_region_nl.h
google-modules/uwb/kernel/net/mcps802154/: Kbuild  ca.c  default_region.c  default_region.h  fira_access.h  fira_crypto.h  fira_frame.c  fira_frame.h  fira_region.c  fira_region.h  fira_region_call.h  fira_round_hopping_crypto.c  fira_round_hopping_crypto.h  fira_round_hopping_crypto_impl.h  fira_session.c  fira_session_fsm.h  fira_session_fsm_idle.h  fira_sts.h  fira_trace.h  fproc.c  fproc_broken.c  fproc_nothing.c  fproc_vendor.c  frame.c  idle_region.c  idle_region.h  ie.c  mcps802154_fproc.h  mcps802154_i.h  mcps_main.c  nfcc_coex_access.c  nfcc_coex_access.h  nfcc_coex_region.c  nfcc_coex_region.h  nfcc_coex_session.c  nfcc_coex_trace.c  on_demand_scheduler.c  on_demand_scheduler.h  ops.c  pctt_access.c  (+10 more)
samsung/: BUILD.bazel  Kbuild  Kconfig  exynos_drm_crtc.c  exynos_drm_debug.c  exynos_drm_decon.h  exynos_drm_dpp.h  exynos_drm_dqe.c  exynos_drm_dqe.h  exynos_drm_drv.h  exynos_drm_format.h  exynos_drm_gem.c  exynos_drm_gem.h  exynos_drm_hibernation.c  exynos_drm_hibernation.h  exynos_drm_plane.c  exynos_drm_tui.c  exynos_drm_writeback.c  exynos_drm_writeback.h
samsung/cal_9820/: decon_reg.c  regs-decon.h
samsung/cal_9845/: dpp_reg.c  dsim_reg.c  hdr_reg.c  regs-decon.h  regs-dsim.h
samsung/cal_9855/: dpp_cal_internal.h  dpp_reg.c  dqe_cal_internal.h  dqe_reg.c  regs-decon.h
samsung/cal_common/: dsim_cal.h  exynos_panel.h  hdr_cal.h
samsung/panel/: Kbuild  panel-boe-nt37290.c  panel-samsung-s6e3fc3.c  panel-samsung-s6e3hc2.c  panel-samsung-s6e3hc3-c10.c  panel-samsung-s6e3hc3.c  panel-samsung-s6e3hc4.c  panel-samsung-sofef01.c
scripts/dtc-aosp/dtc/: .gitignore  BUILD.bazel  LICENSE  METADATA  Makefile  OWNERS  dtc-parser.y
scripts/dtc-aosp/dtc/libfdt/: Android.bp  acpi.c  rules.mk
scripts/dtc-aosp/dtc/tests/: Android.bp
(+3104 files in other folders)
