# NOTE: THIS FILE IS EXPERIMENTAL FOR THE BAZEL MIGRATION AND NOT USED FOR
# YOUR BUILDS CURRENTLY.
#
# It is not yet the source of truth for your build. If you're looking to modify
# the build file, modify the Android.bp file instead. Do *not* modify this file
# unless you have coordinated with the team managing the Soong to Bazel
# migration.

load("//build/kleaf:kernel.bzl", "kernel_module")

filegroup(
    name = "headers",
    srcs = glob([
        "**/*.h",
    ]),
    visibility = [
        "//private/google-modules/touch:__subpackages__",
    ],
)

kernel_module(
    name = "samsung.cloudripper",
    srcs = glob([
        "**/*.c",
        "**/*.h",
        "Kbuild",
        "panel/Kbuild",
    ]) + [
        "//private/google-modules/display/include:headers",
    ],
    outs = [
        "exynos-drm.ko",
        "panel/panel-samsung-drv.ko",
        "panel/panel-samsung-emul.ko",
        "panel/panel-samsung-s6e3fc3.ko",
        "panel/panel-samsung-s6e3fc3-p10.ko",
        "panel/panel-samsung-s6e3hc2.ko",
        "panel/panel-samsung-s6e3hc3.ko",
        "panel/panel-samsung-s6e3hc3-c10.ko",
        "panel/panel-samsung-s6e3hc4.ko",
        "panel/panel-samsung-sofef01.ko",
        "panel/panel-boe-nt37290.ko",
    ],
    kernel_build = "//private/gs-google:cloudripper",
    visibility = [
        "//private/gs-google:__pkg__",
    ],
)
