# NOTE: THIS FILE IS EXPERIMENTAL FOR THE BAZEL MIGRATION AND NOT USED FOR
# YOUR BUILDS CURRENTLY.
#
# It is not yet the source of truth for your build. If you're looking to modify
# the build file, modify the Android.bp file instead. Do *not* modify this file
# unless you have coordinated with the team managing the Soong to Bazel
# migration.

load("//build/kleaf:kernel.bzl", "kernel_module")

filegroup(
    name = "headers",
    srcs = glob([
        "**/*.h",
    ]),
    visibility = [
        "//private/google-modules/touch:__subpackages__",
    ],
)

kernel_module(
    name = "common.cloudripper",
    outs = [
        "heatmap.ko",
        "touch_bus_negotiator.ko",
        "touch_offload.ko",
    ],
    kernel_build = "//private/gs-google:cloudripper",
    visibility = [
        "//private/google-modules/touch:__subpackages__",
        "//private/gs-google:__pkg__",
    ],
)
